--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/bradymadden97/pz-metrics-scripts#readme",
   "dependencies": {
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "express-handlebars": "^3.0.0"
   }
 }
