--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "elasticsearch": "^13.2.0",
     "express": "^4.15.3",
-    "express-handlebars": "^3.0.0",
-    "portscanner": "^2.1.1"
+    "express-handlebars": "^3.0.0"
   }
 }
