--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/bradymadden97/pz-metrics-scripts#readme",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "elasticsearch": "^13.2.0",
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0"
