--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -16,9 +16,11 @@
   },
   "homepage": "https://github.com/bradymadden97/pz-metrics-scripts#readme",
   "dependencies": {
+    "base-64": "^0.1.0",
     "body-parser": "^1.17.2",
     "elasticsearch": "^13.2.0",
     "express": "^4.15.3",
-    "express-handlebars": "^3.0.0"
+    "express-handlebars": "^3.0.0",
+    "request": "^2.81.0"
   }
 }
