--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -18,9 +18,11 @@
   "dependencies": {
     "base-64": "^0.1.0",
     "body-parser": "^1.17.2",
+    "crypto": "0.0.3",
     "elasticsearch": "^13.2.0",
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.4",
     "request": "^2.81.0"
   }
 }
