--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -23,6 +23,7 @@
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.4",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "uid-safe": "^2.1.4"
   }
 }
