--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "base-64": "^0.1.0",
     "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "crypto": "0.0.3",
     "elasticsearch": "^13.2.0",
     "express": "^4.15.3",
