--- a/JenkinsFile
+++ b/JenkinsFile
@@ -2,24 +2,25 @@
 
 node {
     def root = pwd()
-
+    
     stage("Setup") {
         deleteDir()
-        sh "mkdir -p pz-metrics"
-        dir("pz-metrics") {
-            git url: "${env.GIT_URL}", branch: "${env.GIT_BRANCH}"
-        }
+        git url: "${env.GIT_URL}", branch: "${env.GIT_BRANCH}"
     }
+    
     def appvers = ""
+    
     dir("pz-metrics") {
         appvers = sh(script: """git describe --long --tags --always | sed 's/\\./-/'g""", returnStdout: true).trim()
     }
+    
     def appName = "pz-metrics-${appvers}"
 
     stage("Phase One Deploy") {
         if(!fileExists('.cf')) {
             sh "mkdir -p .cf"
         }
+        
         withEnv([
           "CF_HOME=.cf"
         ]) {
@@ -30,7 +31,7 @@ node {
                   cf api ${env.PCF_API_ENDPOINT}
                   cf auth ${CFUSER} ${CFPASS}
                   cf target -o ${env.PCF_ORG} -s ${env.PHASE_ONE_PCF_SPACE}
-                  cf push ${appName} -f ./pz-metrics/manifest.jenkins.yml --hostname ${appName} -d ${env.PHASE_ONE_PCF_DOMAIN} --no-start -u none
+                  cf push ${appName} -f manifest.jenkins.yml --hostname ${appName} -d ${env.PHASE_ONE_PCF_DOMAIN} --no-start -u none
                   cf set-env ${appName} SPACE ${env.PHASE_ONE_PCF_SPACE}
                   cf set-env ${appName} DOMAIN ${env.PHASE_ONE_PCF_DOMAIN}
                   cf restage ${appName}
